fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   box-sizing: inherit;
 }
 
+::-webkit-scrollbar {
+  display: none;
+  }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
